# despamizer

./: .dockerignore  .env.default  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
despamizer/: __init__.py  __main__.py  classifier.py  config.py  imap_client.py  logger.py  models.py  settings.py  spamassassin.py  state.py  worker.py
docker/spamassassin/: Dockerfile  entrypoint.sh  local.cf
tests/: test_classifier.py  test_config.py  test_imap_client.py  test_logger.py  test_main.py  test_spamassassin.py  test_state.py  test_worker.py
