[tool.poetry]
name = "despamizer"
version = "0.1.0"
authors = ["Mariusz Andrzejewski"]
description = "A small daemon-like IMAP worker that moves spam messages out of inbox folders."
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.isort]
profile = "black"
force_sort_within_sections = true
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
lines_between_types = 1
order_by_type = true

[tool.ruff]
target-version = "py311"

extend-exclude = [
    "**/__init__.py",
    "tests/**",
]

[tool.ruff.lint]
extend-select = [
    "D",
    "I",
    "ANN",
    "S",
    "FBT",
    "B",
    "A",
    "C4",
    "T20",
    "SLF",
    "SIM",
    "ARG",
    "N",
]

ignore = [
    "D203",
    "D212",
    "D400",
    "I001",
    "S101",
    "ANN101",
]

[tool.ruff.lint.extend-per-file-ignores]
"test*.py" = [
    "S101",
    "ARG001",
    "SLF001",
    "FBT001",
    "S105",
    "S106",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
imap-tools = "^1.10.0"
PyYAML = "^6.0.2"
sqlmodel = "^0.0.27"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^5.13.2"
pep8-naming = "^0.14.1"
pre-commit = "^3.7.1"
pytest = "^9.0.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
